# vit-from-scratch

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py  train.py
vit_from_scratch/: config.py  dataset.py  utils.py
vit_from_scratch/model/: encoder.py  vit.py
